--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -87,10 +87,9 @@ body {
       .container .side .me .portrait .loading span:nth-child(5) {
         -webkit-animation-delay: 0.8s; }
       .container .side .me .portrait img {
-        display: none;
-        width: 8rem;
+        width: 5.5rem;
         height: 8rem;
-        border-radius: 50%; }
+        border-radius: 5px; }
   .container .side .info-unit ul li label {
     display: inline-block;
     width: 30%; }
